tests/bad/vec_literal_shorthand_bad_type.oc
/// fail: Variable x has type &std::vector::Vector<i32> but initializer has type &std::vector::Vector<str>

def main() {
    let x: $[i32] = $["Hello"]
}